src/test/ui/issues/issue-13853-2.stderr
error[E0615]: attempted to take value of method `get` on type `std::boxed::Box<(dyn ResponseHook + 'static)>`
  --> $DIR/issue-13853-2.rs:15:39
   |
LL | fn foo(res : Box<ResponseHook>) { res.get } //~ ERROR attempted to take value of method
   |                                       ^^^
   |
   = help: maybe a `()` to call it is missing?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0615`.
